resolving layout issues with recapture and send button

--- a/src/Contact.css
+++ b/src/Contact.css
@@ -80,13 +80,13 @@
     justify-content: space-between;
     width: 100%;
     height: 10%;
-    margin: 5% 30%;
-    gap: 5%;
+    /* margin: 5% 30%; */
+    gap: 1%;
 }
 
 .contact-send button {
-    width: 90%;
-    height: 100%;
+    width: 120px;
+    height: 75px;
     background-color: rgb(176 ,191, 184);
     color: white;
     border: none;
@@ -239,7 +239,11 @@ input {
 
 }
 
-
+.contact-send > div {
+    width: 70% !important;
+    display: flex;
+    justify-content: space-evenly;
+}
 
 iframe {
     transform: scale(.7) ;
@@ -257,7 +261,12 @@ iframe {
     height: 22%;
     /* gap: 1%; */
 }
-.contact-email, .contact-send {
+.contact-send {
+    height: 25%;
+    width: 100%;
+    flex-direction: column-reverse;
+}
+.contact-email{
     height: 10%;
     flex-direction: column;
     /* gap: 1%; */
